--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -27,8 +27,8 @@
         "npm-asset/tippy.js": "6.3.7",
         "npm-asset/northernco--ckeditor5-anchor-drupal": "0.5.0",
         "composer/installers": "^2.1",
-        "cu-boulder/boulder_base": "20250730",
-        "cu-boulder/boulder_profile": "20250806",
+        "cu-boulder/boulder_base": "20250917",
+        "cu-boulder/boulder_profile": "20250917",
         "cu-boulder/express_admin": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
         "cu-boulder/ucb_article_author": "dev-main",
@@ -64,6 +64,7 @@
         "drupal/core-project-message": "~10.5.0",
         "drupal/core-recommended": "~10.5.0",
         "drupal/devel": "^5.0",
+        "drupal/diff": "^2.0@beta",
         "drupal/entity_embed": "^1.1",
         "drupal/entity_usage": "^2.0@beta",
         "drupal/externalauth": "^2.0",
