--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -27,8 +27,8 @@
         "npm-asset/tippy.js": "6.3.7",
         "npm-asset/northernco--ckeditor5-anchor-drupal": "0.5.0",
         "composer/installers": "v2.3.0",
-        "cu-boulder/boulder_base": "20250730",
-        "cu-boulder/boulder_profile": "20250806",
+        "cu-boulder/boulder_base": "20250917",
+        "cu-boulder/boulder_profile": "20250917",
         "cu-boulder/express_admin": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
         "cu-boulder/ucb_article_author": "dev-main",
@@ -58,10 +58,11 @@
         "drupal/better_social_sharing_buttons": "4.1.0",
         "drupal/ckeditor5_paste_filter": "1.1.0",
         "drupal/consumer_image_styles": "4.0.10",
-        "drupal/core-composer-scaffold": "10.5.2",
-        "drupal/core-project-message": "10.5.2",
-        "drupal/core-recommended": "10.5.2",
+        "drupal/core-composer-scaffold": "10.5.3",
+        "drupal/core-project-message": "10.5.3",
+        "drupal/core-recommended": "10.5.3",
         "drupal/devel": "5.4.0",
+        "drupal/diff": "2.0.0-beta4",
         "drupal/entity_embed": "1.7.0",
         "drupal/entity_usage": "2.0.0-beta24",
         "drupal/externalauth": "2.0.8",
@@ -69,11 +70,11 @@
         "drupal/field_group": "3.6.0",
         "drupal/focal_point": "2.1.2",
         "drupal/google_cse": "5.0.2",
-        "drupal/google_tag": "2.0.8",
+        "drupal/google_tag": "2.0.9",
         "drupal/jsonapi_extras": "3.26.0",
         "drupal/klaro": "3.0.7",
-        "drupal/layout_builder_iframe_modal": "1.3.6",
-        "drupal/linkit": "7.0.8",
+        "drupal/layout_builder_iframe_modal": "1.3.7",
+        "drupal/linkit": "7.0.9",
         "drupal/media_alias_display": "2.1.1",
         "drupal/media_entity_file_replace": "1.3.0",
         "drupal/media_file_delete": "1.3.1",
@@ -81,7 +82,7 @@
         "drupal/menu_block": "1.14.0",
         "drupal/menu_firstchild": "2.2.0",
         "drupal/menu_item_extras": "3.1.0",
-        "drupal/metatag": "2.1.1",
+        "drupal/metatag": "2.1.2",
         "drupal/migrate_plus": "6.0.8",
         "drupal/migrate_tools": "6.1.2",
         "drupal/pantheon_advanced_page_cache": "2.3.3",
@@ -89,7 +90,7 @@
         "drupal/pathauto": "1.13.0",
         "drupal/rebuild_cache_access": "1.12.0",
         "drupal/recaptcha_v3": "2.0.4",
-        "drupal/redirect": "1.11.0",
+        "drupal/redirect": "1.12.0",
         "drupal/redis": "1.10.0",
         "drupal/responsive_preview": "2.2.0",
         "drupal/scheduler": "2.2.1",
@@ -109,13 +110,14 @@
         "simplesamlphp/simplesamlphp": "v2.4.2",
         "drupal/config_update": "2.0.0-alpha4",
         "asm89/stack-cors": "v2.3.0",
+        "caxy/php-htmldiff": "v0.1.17",
         "chi-teck/drupal-code-generator": "3.6.1",
-        "composer/semver": "3.4.3",
+        "composer/semver": "3.4.4",
         "consolidation/annotated-command": "4.10.2",
         "consolidation/config": "3.1.1",
         "consolidation/filter-via-dot-access-data": "2.0.2",
         "consolidation/log": "3.1.0",
-        "consolidation/output-formatters": "4.6.0",
+        "consolidation/output-formatters": "4.6.1",
         "consolidation/robo": "5.1.0",
         "consolidation/site-alias": "4.1.1",
         "consolidation/site-process": "5.4.2",
@@ -125,18 +127,19 @@
         "doctrine/deprecations": "1.1.5",
         "doctrine/event-manager": "2.0.1",
         "doctrine/lexer": "2.1.1",
-        "doctrine/persistence": "4.0.0",
+        "doctrine/persistence": "4.1.0",
         "drupal/captcha": "2.0.9",
         "drupal/consumers": "1.20.0",
-        "drupal/core": "10.5.2",
+        "drupal/core": "10.5.3",
         "drupal/crop": "2.4.0",
         "drupal/ctools": "4.1.0",
         "drupal/embed": "1.10.0",
         "drupal/entity_reference_revisions": "1.12.0",
         "drupal/klaro_js": "3.0.1",
-        "drupal/token": "1.15.0",
+        "drupal/token": "1.16.0",
         "e0ipso/shaper": "1.2.7",
         "egulias/email-validator": "4.0.4",
+        "ezyang/htmlpurifier": "v4.18.0",
         "gettext/gettext": "v5.7.3",
         "gettext/languages": "2.12.1",
         "gettext/translator": "v1.2.1",
@@ -146,15 +149,16 @@
         "guzzlehttp/guzzle": "7.9.3",
         "guzzlehttp/promises": "2.2.0",
         "guzzlehttp/psr7": "2.7.1",
-        "justinrainbow/json-schema": "6.4.2",
+        "justinrainbow/json-schema": "6.5.2",
         "laminas/laminas-escaper": "2.17.0",
         "laminas/laminas-feed": "2.25.0",
         "laminas/laminas-stdlib": "3.20.0",
         "laravel/prompts": "v0.3.6",
         "league/container": "4.2.5",
-        "marc-mabe/php-enum": "v4.7.1",
+        "marc-mabe/php-enum": "v4.7.2",
         "masterminds/html5": "2.9.0",
         "mck89/peast": "v1.17.2",
+        "mkalkbrenner/php-htmldiff-advanced": "0.0.8",
         "nikic/php-parser": "v5.6.1",
         "nyholm/psr7": "1.8.2",
         "pear/archive_tar": "1.5.0",
@@ -179,8 +183,8 @@
         "simplesamlphp/assert": "v1.8.2",
         "simplesamlphp/composer-module-installer": "v1.4.0",
         "simplesamlphp/composer-xmlprovider-installer": "v1.0.2",
-        "simplesamlphp/saml2": "v5.0.2",
-        "simplesamlphp/saml2-legacy": "v4.18.1",
+        "simplesamlphp/saml2": "v5.0.4",
+        "simplesamlphp/saml2-legacy": "v4.19.0",
         "simplesamlphp/simplesamlphp-assets-base": "v2.3.10",
         "simplesamlphp/xml-common": "v1.25.1",
         "simplesamlphp/xml-security": "v1.13.7",
@@ -188,42 +192,42 @@
         "symfony/cache": "v6.4.24",
         "symfony/cache-contracts": "v3.6.0",
         "symfony/config": "v6.4.24",
-        "symfony/console": "v6.4.24",
-        "symfony/dependency-injection": "v6.4.24",
+        "symfony/console": "v6.4.25",
+        "symfony/dependency-injection": "v6.4.25",
         "symfony/deprecation-contracts": "v3.5.1",
         "symfony/error-handler": "v6.4.24",
-        "symfony/event-dispatcher": "v6.4.24",
+        "symfony/event-dispatcher": "v6.4.25",
         "symfony/event-dispatcher-contracts": "v3.5.1",
         "symfony/filesystem": "v6.4.24",
         "symfony/finder": "v6.4.24",
-        "symfony/framework-bundle": "v6.4.24",
-        "symfony/http-foundation": "v6.4.24",
-        "symfony/http-kernel": "v6.4.24",
-        "symfony/intl": "v6.4.24",
-        "symfony/mailer": "v6.4.24",
+        "symfony/framework-bundle": "v6.4.25",
+        "symfony/http-foundation": "v6.4.25",
+        "symfony/http-kernel": "v6.4.25",
+        "symfony/intl": "v6.4.25",
+        "symfony/mailer": "v6.4.25",
         "symfony/mime": "v6.4.24",
         "symfony/password-hasher": "v6.4.24",
         "symfony/polyfill-ctype": "v1.31.0",
         "symfony/polyfill-iconv": "v1.31.0",
         "symfony/polyfill-intl-grapheme": "v1.31.0",
-        "symfony/polyfill-intl-icu": "v1.32.0",
+        "symfony/polyfill-intl-icu": "v1.33.0",
         "symfony/polyfill-intl-idn": "v1.31.0",
         "symfony/polyfill-intl-normalizer": "v1.31.0",
         "symfony/polyfill-mbstring": "v1.31.0",
-        "symfony/polyfill-php81": "v1.32.0",
+        "symfony/polyfill-php81": "v1.33.0",
         "symfony/polyfill-php83": "v1.31.0",
-        "symfony/process": "v6.4.24",
+        "symfony/process": "v6.4.25",
         "symfony/psr-http-message-bridge": "v6.4.24",
         "symfony/routing": "v6.4.24",
-        "symfony/serializer": "v6.4.24",
+        "symfony/serializer": "v6.4.25",
         "symfony/service-contracts": "v3.5.1",
-        "symfony/string": "v6.4.24",
+        "symfony/string": "v6.4.25",
         "symfony/translation-contracts": "v3.5.1",
-        "symfony/twig-bridge": "v6.4.24",
-        "symfony/validator": "v6.4.24",
-        "symfony/var-dumper": "v6.4.24",
-        "symfony/var-exporter": "v6.4.24",
-        "symfony/yaml": "v6.4.24",
+        "symfony/twig-bridge": "v6.4.25",
+        "symfony/validator": "v6.4.25",
+        "symfony/var-dumper": "v6.4.25",
+        "symfony/var-exporter": "v6.4.25",
+        "symfony/yaml": "v6.4.25",
         "twig/intl-extra": "v3.21.0",
         "twig/twig": "v3.20.0",
         "vardot/ckeditor5-anchor-drupal": "2.0.3",
