--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -27,8 +27,8 @@
         "npm-asset/tippy.js": "6.3.7",
         "npm-asset/northernco--ckeditor5-anchor-drupal": "0.5.0",
         "composer/installers": "v2.3.0",
-        "cu-boulder/boulder_base": "20251001",
-        "cu-boulder/boulder_profile": "20250917",
+        "cu-boulder/boulder_base": "20251022",
+        "cu-boulder/boulder_profile": "20251022",
         "cu-boulder/express_admin": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
         "cu-boulder/ucb_article_author": "dev-main",
@@ -36,7 +36,7 @@
         "cu-boulder/ucb_bootstrap_layouts": "dev-main",
         "cu-boulder/ucb_campus_news": "dev-main",
         "cu-boulder/ucb_ckeditor_plugins": "dev-main",
-        "cu-boulder/ucb_custom_entities": "20250514",
+        "cu-boulder/ucb_custom_entities": "20251022",
         "cu-boulder/ucb_default_content": "dev-main",
         "cu-boulder/ucb_drush_commands": "v1.1.1",
         "cu-boulder/ucb_focal_image_enable": "dev-main",
@@ -46,6 +46,8 @@
         "cu-boulder/ucb_site_configuration": "dev-main",
         "cu-boulder/ucb_styled_block": "dev-main",
         "cu-boulder/ucb_third_party_libraries": "dev-main",
+        "cu-boulder/ucb_trust_schema": "dev-main",
+        "cu-boulder/ucb_trusted_content_discovery": "dev-main",
         "cu-boulder/ucb_user_invite": "dev-main",
         "cu-boulder/ckeditor5_bootstrap_accordion": "dev-main",
         "cu-boulder/ckeditor5_icons": "dev-main",
@@ -58,9 +60,9 @@
         "drupal/better_social_sharing_buttons": "4.1.0",
         "drupal/ckeditor5_paste_filter": "1.1.0",
         "drupal/consumer_image_styles": "4.0.10",
-        "drupal/core-composer-scaffold": "10.5.3",
-        "drupal/core-project-message": "10.5.3",
-        "drupal/core-recommended": "10.5.3",
+        "drupal/core-composer-scaffold": "10.5.4",
+        "drupal/core-project-message": "10.5.4",
+        "drupal/core-recommended": "10.5.4",
         "drupal/devel": "5.4.0",
         "drupal/diff": "2.0.0-beta4",
         "drupal/entity_embed": "1.7.0",
@@ -71,10 +73,10 @@
         "drupal/focal_point": "2.1.2",
         "drupal/google_cse": "5.0.2",
         "drupal/google_tag": "2.0.9",
-        "drupal/jsonapi_extras": "3.26.0",
+        "drupal/jsonapi_extras": "3.27.0",
         "drupal/klaro": "3.0.7",
         "drupal/layout_builder_iframe_modal": "1.3.7",
-        "drupal/linkit": "7.0.9",
+        "drupal/linkit": "7.0.10",
         "drupal/media_alias_display": "2.1.1",
         "drupal/media_entity_file_replace": "1.3.0",
         "drupal/media_file_delete": "1.3.1",
@@ -87,18 +89,18 @@
         "drupal/migrate_tools": "6.1.2",
         "drupal/pantheon_advanced_page_cache": "2.3.3",
         "drupal/paragraphs": "1.19.0",
-        "drupal/pathauto": "1.13.0",
+        "drupal/pathauto": "1.14.0",
         "drupal/rebuild_cache_access": "1.12.0",
         "drupal/recaptcha_v3": "2.0.4",
         "drupal/redirect": "1.12.0",
         "drupal/redis": "1.10.0",
-        "drupal/responsive_preview": "2.2.0",
-        "drupal/scheduler": "2.2.1",
+        "drupal/responsive_preview": "2.3.0",
+        "drupal/scheduler": "2.2.2",
         "drupal/shortcode": "2.0.2",
         "drupal/simple_sitemap": "4.2.2",
         "drupal/simplesamlphp_auth": "4.0.1",
         "drupal/smtp": "1.4.0",
-        "drupal/trash": "3.0.20",
+        "drupal/trash": "3.0.21",
         "drupal/twig_tweak": "3.4.1",
         "drupal/unpublished_404": "2.0.3",
         "drupal/webform": "6.2.9",
@@ -107,7 +109,7 @@
         "pantheon-systems/pantheon_domain_masking": "2.1.0",
         "pantheon-systems/upstream-management": "1.0.1",
         "robrichards/xmlseclibs": "3.1.1",
-        "simplesamlphp/simplesamlphp": "v2.4.2",
+        "simplesamlphp/simplesamlphp": "v2.4.3",
         "drupal/config_update": "2.0.0-alpha4",
         "asm89/stack-cors": "v2.3.0",
         "caxy/php-htmldiff": "v0.1.17",
@@ -127,10 +129,10 @@
         "doctrine/deprecations": "1.1.5",
         "doctrine/event-manager": "2.0.1",
         "doctrine/lexer": "2.1.1",
-        "doctrine/persistence": "4.1.0",
+        "doctrine/persistence": "4.1.1",
         "drupal/captcha": "2.0.9",
         "drupal/consumers": "1.21.0",
-        "drupal/core": "10.5.3",
+        "drupal/core": "10.5.4",
         "drupal/crop": "2.4.0",
         "drupal/ctools": "4.1.0",
         "drupal/embed": "1.10.0",
@@ -139,7 +141,7 @@
         "drupal/token": "1.16.0",
         "e0ipso/shaper": "1.2.7",
         "egulias/email-validator": "4.0.4",
-        "ezyang/htmlpurifier": "v4.18.0",
+        "ezyang/htmlpurifier": "v4.19.0",
         "gettext/gettext": "v5.7.3",
         "gettext/languages": "2.12.1",
         "gettext/translator": "v1.2.1",
@@ -149,17 +151,17 @@
         "guzzlehttp/guzzle": "7.9.3",
         "guzzlehttp/promises": "2.2.0",
         "guzzlehttp/psr7": "2.7.1",
-        "justinrainbow/json-schema": "6.5.2",
-        "laminas/laminas-escaper": "2.17.0",
+        "justinrainbow/json-schema": "6.6.0",
+        "laminas/laminas-escaper": "2.18.0",
         "laminas/laminas-feed": "2.25.0",
-        "laminas/laminas-stdlib": "3.20.0",
+        "laminas/laminas-stdlib": "3.21.0",
         "laravel/prompts": "v0.3.7",
         "league/container": "4.2.5",
         "marc-mabe/php-enum": "v4.7.2",
         "masterminds/html5": "2.9.0",
-        "mck89/peast": "v1.17.2",
+        "mck89/peast": "v1.17.4",
         "mkalkbrenner/php-htmldiff-advanced": "0.0.8",
-        "nikic/php-parser": "v5.6.1",
+        "nikic/php-parser": "v5.6.2",
         "nyholm/psr7": "1.8.2",
         "pear/archive_tar": "1.5.0",
         "pear/console_getopt": "v1.4.3",
@@ -167,7 +169,7 @@
         "pear/pear_exception": "v1.0.2",
         "phootwork/collection": "v3.2.3",
         "phootwork/lang": "v3.2.3",
-        "phpmailer/phpmailer": "v6.11.1",
+        "phpmailer/phpmailer": "v6.12.0",
         "phpowermove/docblock": "v4.0",
         "psr/cache": "3.0.0",
         "psr/clock": "1.0.0",
@@ -177,7 +179,7 @@
         "psr/http-factory": "1.1.0",
         "psr/http-message": "2.0",
         "psr/log": "3.0.2",
-        "psy/psysh": "v0.12.12",
+        "psy/psysh": "v0.12.13",
         "ralouphie/getallheaders": "3.0.3",
         "sebastian/diff": "4.0.6",
         "simplesamlphp/assert": "v1.8.2",
@@ -185,7 +187,7 @@
         "simplesamlphp/composer-xmlprovider-installer": "v1.0.2",
         "simplesamlphp/saml2": "v5.0.4",
         "simplesamlphp/saml2-legacy": "v4.19.0",
-        "simplesamlphp/simplesamlphp-assets-base": "v2.3.11",
+        "simplesamlphp/simplesamlphp-assets-base": "v2.4.3",
         "simplesamlphp/xml-common": "v1.25.1",
         "simplesamlphp/xml-security": "v1.13.7",
         "simplesamlphp/xml-soap": "v1.7.1",
@@ -198,6 +200,7 @@
         "symfony/error-handler": "v6.4.26",
         "symfony/event-dispatcher": "v6.4.25",
         "symfony/event-dispatcher-contracts": "v3.5.1",
+        "symfony/expression-language": "v6.4.24",
         "symfony/filesystem": "v6.4.24",
         "symfony/finder": "v6.4.24",
         "symfony/framework-bundle": "v6.4.26",
