--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -27,7 +27,7 @@
         "npm-asset/tippy.js": "6.3.7",
         "npm-asset/northernco--ckeditor5-anchor-drupal": "0.5.0",
         "composer/installers": "^2.1",
-        "cu-boulder/boulder_base": "20251203",
+        "cu-boulder/boulder_base": "20251210",
         "cu-boulder/boulder_profile": "20251022",
         "cu-boulder/express_admin": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
@@ -36,7 +36,7 @@
         "cu-boulder/ucb_bootstrap_layouts": "dev-main",
         "cu-boulder/ucb_campus_news": "dev-main",
         "cu-boulder/ucb_ckeditor_plugins": "dev-main",
-        "cu-boulder/ucb_custom_entities": "20251029",
+        "cu-boulder/ucb_custom_entities": "20251210",
         "cu-boulder/ucb_default_content": "dev-main",
         "cu-boulder/ucb_drush_commands": "1.2.0",
         "cu-boulder/ucb_focal_image_enable": "dev-main",
@@ -108,7 +108,7 @@
         "pantheon-systems/drupal-integrations": "^10",
         "pantheon-systems/pantheon_domain_masking": "^2.1",
         "pantheon-systems/upstream-management": "^1.0",
-        "robrichards/xmlseclibs": "3.1.1",
+        "robrichards/xmlseclibs": "^3.1.0",
         "simplesamlphp/simplesamlphp": "^2.2",
         "drupal/config_update": "^2.0@alpha"
     },
